# zaliver

./: .gitignore  Zaliver.py  build_pyinstaller_onefile.ps1  pyproject.toml  requirements.txt  setup_py2app.py  zaliver.cmd  zaliver.spec  zaliver_macos.spec  zaliver_onefile.spec  zaliver_onefile_macos.spec  zaliver_onefile_windows.spec  zaliver_windows.spec
.github/workflows/: build.yml
macos_app/: Zaliver.py  setup.py
scripts/: install_build_macos.sh
src/zaliver/: __main__.py
src/zaliver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/zaliver/antydetect/: api.py  dolphin_open.py  dolphin_test.py
src/zaliver/db/: __init__.py  video_store.py
src/zaliver/processing/: batch_paths.py  chunking.py  color_grade.py  ffmpeg_install.py  ffmpeg_merge.py  ffmpeg_probe.py  ffmpeg_vf.py  gpu_detect.py  pipeline.py  shm_buffers.py  thread_worker.py  worker.py
src/zaliver/ui/: dolphin_profile_row.py  ffmpeg_install_worker.py  main_window.py  theme.qss  widgets.py
